--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 group=com.minelittlepony
 displayname=Mine Little Pony
 authors=Verdana, Rene_Z, Mumfrey, Killjoy1221, Sollace
