--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,12 @@
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 group=com.minelittlepony
 displayname=HDSkins
 authors=Mumfrey, Killjoy1221, Sollace
 description=Separate skin server that also supports HD skins. Access via button on the main menu.
 version=5.0.0
 release=SNAPSHOT
-minecraft_version=1.12.2
-forge_version=14.23.5.2768
+minecraft_version=1.13.2
+forge_version=25.0.90
 mappings_channel=snapshot
-mappings_version=stable_39
+mappings_version=20190324
