TODO: Fix run configs

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ minecraft {
 
             mods {
                 hdskins {
+                    // Remember to add /bin/default to the Environment configs
+                    // hdskins%%C:/.../bin/default
                     source sourceSets.fml
                 }
             }
