--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "skins"]
-	path = skins
-	url = https://github.com/MineLittlePony/Community-Skin-Pack.git
+[submodule "kirin"]
+	path = kirin
+	url = https://github.com/MineLittlePony/Kirin.git
 	branch = master
