--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ dependencies {
         transitive = false
     }
 
-    compile project(':kirin') {
+    compile project(':Kirin') {
         transitive = false
     }
 }
