--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "kirin"]
-	path = kirin
+[submodule "Kirin"]
+	path = Kirin
 	url = https://github.com/MineLittlePony/Kirin.git
 	branch = master
