--- a/build.gradle
+++ b/build.gradle
@@ -71,8 +71,9 @@ minecraft {
     }
 }
 
-targetCompatibility = 1.8
-sourceCompatibility = 1.8
+// From the forge MDK: Need this here so eclipse task generates correctly.
+targetCompatibility = compileJava.targetCompatibility = 1.8
+sourceCompatibility = compileJava.sourceCompatibility = 1.8
 
 repositories {
     maven {
