Fix forge loading.

--- a/src/fml/resources/META-INF/mods.toml
+++ b/src/fml/resources/META-INF/mods.toml
@@ -20,3 +20,9 @@ Access via the main menu.'''
     versionRange="[25,)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.hdskins]]
+    modIddd="kirin"
+    mandatory=true
+    versionRange="*"
+    ordering="NONE"
+    side="CLIENT"
