--- a/build.gradle
+++ b/build.gradle
@@ -39,17 +39,6 @@ group = project.group
 description = project.displayname
 
 sourceSets {
-    main {
-
-    }
-
-    // Workaround for broken classloading with forge in 1.13
-    kirin {
-        java {
-            srcDir "../Kirin/src/main/java"
-        }
-    }
-
     fml {
         compileClasspath += main.compileClasspath
         compileClasspath += main.output
@@ -68,19 +57,11 @@ minecraft {
 
             mods {
                 hdskins {
-                    // TODO: Gradle generates broken eclipse configs. Make sure you apply the following changes otherwise the game won't run:
-                    //  - (Optional) Remove test/java from the classpath
-                    //  - (Optional) Remove test/resources from the classpath
-                    //  - Disable "Allow output folders for source folders"
-                    //  - Remove the kirin.jar from the classpath
-                    //  - Change the run config to use the following string for finding mod classes:
-                            // TODO: Remember to add /bin/default to the Environment configs
-                            // hdskins%%C:/.../bin/default;hdskins%%C:/.../bin/default
-                            // * Duplicated twice because forge is retarded
-//                    source sourceSets.main
                     source sourceSets.fml
+                    source sourceSets.main
                 }
             }
+            ideaModule = "HDSkins.fml"
         }
     }
 }
@@ -110,7 +91,7 @@ dependencies {
         transitive = false
     }
 
-    compile "com.github.MineLittlePony:Kirin:master-SNAPSHOT:base"
+    compile fg.deobf("com.github.MineLittlePony:Kirin:master-SNAPSHOT")
 }
 
 manifest {
@@ -120,14 +101,11 @@ manifest {
     )
 }
 
+// TODO remove when mixingradle gets updated.
 compileJava.options.compilerArgs += '-proc:none'
 
-jar {
-    classifier 'base'
-    extension 'jar'
-}
-
 shadowJar {
+    classifier 'universal'
     dependencies {
         exclude 'META-INF/**'
     }
