--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,20 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-group=com.minelittlepony
-displayname=HDSkins
-authors=Mumfrey, Killjoy1221, Sollace
-description=Separate skin server that also supports HD skins. Access via button on the main menu.
-version=5.0.0
-release=SNAPSHOT
-minecraft_version=1.13.2
-forge_version=25.0.107
-mappings_channel=snapshot
-mappings_version=20190324
+
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+	minecraft_version=1.14.1
+	yarn_mappings=1.14.1+build.5
+	loader_version=0.4.7+build.147
+
+# Mod Properties
+	group=com.minelittlepony
+	displayname=HDSkins
+	authors=Mumfrey, Killjoy1221, Sollace
+	description=Separate skin server that also supports HD skins. Access via button on the main menu.
+	version=5.0.0
+	release=SNAPSHOT
+
+# Dependencies
+	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
+	fabric_version=0.3.0-pre+build.156
