--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ org.gradle.daemon=false
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
 	fabric_version=0.3.0-pre+build.156
+	# use the same version as httpclient
+	http_client_version=4.3.2
+	kirin_version=1.14-fabric-SNAPSHOT
