--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,6 @@ buildscript {
 	}
     dependencies {
     	classpath 'fabric-loom:fabric-loom.gradle.plugin:0.2.2-SNAPSHOT'
-    	classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
         classpath 'org.ajoberstar.grgit:grgit-gradle:3.1.1'
     }
 }
@@ -26,7 +25,6 @@ repositories {
 }
 
 apply plugin: 'fabric-loom'
-apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'org.ajoberstar.grgit'
 
 targetCompatibility = JavaVersion.VERSION_1_8
@@ -38,7 +36,7 @@ ext {
     if (file('.git/shallow').exists()) {
         // don't clone with --depth
         revision = -1
-        hash += " shallow"
+        hash += ' shallow'
     }
 }
 
@@ -56,30 +54,29 @@ archivesBaseName = project.name
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
+
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
-	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
+	compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
 	
     modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // use the same version as httpclient
-    compile('org.apache.httpcomponents:httpmime:4.3.2') {
-        transitive = false
-    }
+    compile "org.apache.httpcomponents:httpmime:${project.http_client_version}"
+    include "org.apache.httpcomponents:httpmime:${project.http_client_version}"
 
-    modCompile "com.github.MineLittlePony:Kirin:1.14-fabric-SNAPSHOT"
-    include "com.github.MineLittlePony:Kirin:1.14-fabric-SNAPSHOT"
+    modCompile "com.github.MineLittlePony:Kirin:${project.kirin_version}"
+    include "com.github.MineLittlePony:Kirin:${project.kirin_version}"
 }
 
 processResources {
-	inputs.property "version", project.version
+	inputs.property 'version', project.version
 
 	from(sourceSets.main.resources.srcDirs) {
-		include "fabric.mod.json"
-		expand "version": project.version
+		include 'fabric.mod.json'
+		expand 'version': project.version
 	}
 
 	from(sourceSets.main.resources.srcDirs) {
-		exclude "fabric.mod.json"
+		exclude 'fabric.mod.json'
 	}
 }
 
@@ -88,20 +85,11 @@ tasks.withType(JavaCompile) {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
+	classifier = 'sources'
 	from sourceSets.main.allSource
 }
 
-shadowJar {
-    classifier 'universal'
-    dependencies {
-        exclude 'META-INF/**'
-    }
-
-    relocate 'org.apache.http.entity.mime', 'com.minelittlepony.repack.org.apache.http.entity.mime'
-}
-
 jar {
-	from "LICENSE"
+	from 'LICENSE'
 }
 
