Switch to use the master branch of kirin

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ org.gradle.daemon=false
   fabric_version=0.3.0-pre+build.156
   # use the same version as httpclient
   http_client_version=4.3.2
-  kirin_version=1.14-fabric-SNAPSHOT
+  kirin_version=master-SNAPSHOT
