--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/use
-  minecraft_version=1.14.1
-  yarn_mappings=1.14.1+build.5
-  loader_version=0.4.7+build.147
+  minecraft_version=1.14.2
+  yarn_mappings=1.14.2+build.2
+  loader_version=0.4.8+
 
 # Mod Properties
   group=com.minelittlepony
@@ -17,7 +17,7 @@ org.gradle.daemon=false
 
 # Dependencies
   # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-  fabric_version=0.3.0-pre+build.156
+  fabric_version=0.3.0+
   # use the same version as httpclient
   http_client_version=4.3.2
-  kirin_version=09d9d6ddf2
+  kirin_version=16084af1da
