--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,13 @@
+pluginManagement {
+    repositories {
+        jcenter()
+        maven {
+            name = 'Fabric'
+            url = 'https://maven.fabricmc.net/'
+        }
+        gradlePluginPortal()
+    }
+}
 rootProject.name = 'HDSkins'
 // Checkout to parent dir to dev both
 //includeBuild '../Kirin'
