--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ tasks.withType(JavaCompile) {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-  archiveClassifier = 'sources'
+  classifier = 'sources'
   from sourceSets.main.allSource
 }
 
