--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ org.gradle.daemon=false
   fabric_version=0.3.0+
   # use the same version as httpclient
   http_client_version=4.3.2
-  kirin_version=16084af1da
+  kirin_version=1.14.2-1.0.1-SNAPSHOT
