--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ minecraft {
 repositories {
   maven {
     name = 'minelp'
-    url = 'https://repo.minelittlepony-mod.com/maven/snapshot'
+    url = 'http://repo.minelittlepony-mod.com/maven/snapshot'
   }
 }
 
@@ -39,8 +39,8 @@ dependencies {
   compile "org.apache.httpcomponents:httpmime:${project.http_client_version}"
   include "org.apache.httpcomponents:httpmime:${project.http_client_version}"
 
-  modCompile "com.github.MineLittlePony:Kirin:${project.kirin_version}"
-  include "com.github.MineLittlePony:Kirin:${project.kirin_version}"
+  modCompile "com.minelittlepony:Kirin:${project.kirin_version}"
+  include "com.minelittlepony:Kirin:${project.kirin_version}"
 }
 
 processResources {
