Import only what we need

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ dependencies {
     modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
 
-    modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modCompile "net.fabricmc.fabric-api:fabric-api-base:0.1.0+"
+    modCompile "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.0+"
 
     compile "org.apache.httpcomponents:httpmime:${project.http_client_version}"
     include "org.apache.httpcomponents:httpmime:${project.http_client_version}"
