--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
     modCompile "net.fabricmc.fabric-api:fabric-api-base:0.1.0+"
     modCompile "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.0+"
+    modCompile "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.0+"
 
     compile "org.apache.httpcomponents:httpmime:${project.http_client_version}"
     include "org.apache.httpcomponents:httpmime:${project.http_client_version}"
