Make HDSkins the entrypoint Use new ClientReadyCallback from kirin instead of doing it myself

--- a/build.gradle
+++ b/build.gradle
@@ -42,17 +42,17 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}"
 
-    modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+    modApi "net.fabricmc:fabric-loader:${project.loader_version}"
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
 
-    modCompile "net.fabricmc.fabric-api:fabric-api-base:0.1.0+"
-    modCompile "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.0+"
-    modCompile "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.0+"
+    modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.0+"
+    modApi "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.0+"
+    modApi "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.0+"
 
-    compile "org.apache.httpcomponents:httpmime:${project.http_client_version}"
+    implementation "org.apache.httpcomponents:httpmime:${project.http_client_version}"
     include "org.apache.httpcomponents:httpmime:${project.http_client_version}"
 
-    modCompile "com.minelittlepony:Kirin:${project.kirin_version}"
+    modApi "com.minelittlepony:Kirin:${project.kirin_version}"
     include "com.minelittlepony:Kirin:${project.kirin_version}"
 }
 
