--- a/gradle.properties
+++ b/gradle.properties
@@ -12,12 +12,12 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=5.3
-  release=SNAPSHOT
+  version=5.3.1
+  release=pre3
 
 # Dependencies
   # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
   fabric_version=0.3.0+
   # use the same version as httpclient
   http_client_version=4.3.2
-  kirin_version=1.14.3-1.3.1-SNAPSHOT
+  kirin_version=1.14.3-1.4-SNAPSHOT
