Add ModMenu integration

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 
     modApi "com.minelittlepony:Kirin:${project.kirin_version}"
     include "com.minelittlepony:Kirin:${project.kirin_version}"
+
+    modImplementation "io.github.prospector.modmenu:ModMenu:1.6.2-93"
 }
 
 processResources {
