Back to our regularly scheduled programming

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.daemon=false
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
   version=5.4.1
-  release=RELEASE
+  release=SNAPSHOT
 
 # Dependencies
   # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
