--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,11 @@ org.gradle.daemon=false
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
   version=5.4.3
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
   # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
   fabric_version=0.3.0+
   # use the same version as httpclient
   http_client_version=4.3.2
-  kirin_version=1.14.4-1.4.4-SNAPSHOT
+  kirin_version=1.14.4-1.4.4
