Initial update to 19w46b

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 
 plugins {
     id 'java-library'
-    id 'fabric-loom' version '0.2.5-SNAPSHOT'
+    id 'fabric-loom' version '0.2.6-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -46,13 +46,13 @@ if (System.env.CI) {
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}"
-
     modApi "net.fabricmc:fabric-loader:${project.loader_version}"
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
 
-    modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.0+"
-    modApi "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.0+"
-    modApi "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.0+"
+    modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.2+"
+    modApi "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.2+"
+    modApi "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.8+"
+    modApi "net.fabricmc.fabric-api:fabric-renderer-registries-v1:1.0.4+"
 
     implementation "org.apache.httpcomponents:httpmime:${project.http_client_version}"
     include "org.apache.httpcomponents:httpmime:${project.http_client_version}"
@@ -60,7 +60,7 @@ dependencies {
     modApi "com.minelittlepony:Kirin:${project.kirin_version}"
     include "com.minelittlepony:Kirin:${project.kirin_version}"
 
-    modImplementation "io.github.prospector.modmenu:ModMenu:1.6.2-93"
+    //modImplementation "io.github.prospector.modmenu:ModMenu:1.6.2-93"
 }
 
 processResources {
