--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,18 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/use
-  minecraft_version=1.14.4
-  yarn_mappings=1.14.4+build.2
-  loader_version=0.4.8+
+	minecraft_version=19w46b
+	yarn_mappings=19w46b+build.1:v2
+	loader_version=0.6.4+build.169
 
 # Mod Properties
   group=com.minelittlepony
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=5.6
+  version=6
   release=SNAPSHOT
 
 # Dependencies
-  # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-  fabric_version=0.3.0+
-  # use the same version as httpclient
   http_client_version=4.3.2
-  kirin_version=1.14.4-1.4.6
+  kirin_version=19w46b-1.5-SNAPSHOT
