--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/use
-	minecraft_version=19w46b
-	yarn_mappings=19w46b+build.1:v2
-	loader_version=0.6.4+build.169
+	minecraft_version=1.15-pre1
+	yarn_mappings=1.15-pre1+build.3:v2
+	loader_version=0.7.1+build.173
 
 # Mod Properties
   group=com.minelittlepony
@@ -17,4 +17,4 @@ org.gradle.daemon=false
 
 # Dependencies
   http_client_version=4.3.2
-  kirin_version=19w46b-1.5-SNAPSHOT
+  kirin_version=1.15-pre1-1.5-SNAPSHOT
